--- a/package.json
+++ b/package.json
@@ -6,20 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "ts-node ./scripts/loadDb.ts",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.0",
+    "@datastax/astra-db-ts": "^2.0.2",
+    "ai": "^2.2.14",
+    "dotenv": "^17.2.1",
+    "langchain": "^0.3.30",
+    "next": "15.4.5",
+    "openai": "^5.11.0",
+    "puppeteer": "^24.15.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
-    "@eslint/eslintrc": "^3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
